Added an Activity for a private messaging menu, which will eventually allow user to access different messages. Added a list view, which will be how users can navigate messages from different users.

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name=".Activities.TradePlatform"
             android:exported="true" />
         <activity
+            android:name=".Activities.PrivateMenuActivity"
+            android:exported="true" />
+        <activity
             android:name=".Activities.PrivateChat"
             android:exported="true" />
         <activity
