--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.Post"
+            android:name=".Activities.ProductPage"
             android:exported="false" />
         <activity
             android:name=".Activities.IntroPage"
@@ -33,7 +33,7 @@
             android:name=".Activities.Favorite"
             android:exported="true" />
         <activity
-            android:name=".Activities.TradePlatform"
+            android:name=".Activities.Post"
             android:exported="true" />
         <activity
             android:name=".Activities.PrivateMenuActivity"
