--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-        <activity
-            android:name=".Activities.SearchResultPage"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".Activities.SearchResultPage"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".Activities.ProductPage"
             android:exported="false" />
@@ -27,8 +27,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- <activity -->
-        <!-- android:name=".Activities.LoginActivity" -->
-        <!-- android:exported="false" /> -->
+
+        <activity
+            android:name=".Activities.SearchResultPage"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="false" />
+
         <activity
             android:name=".Activities.RegisterActivity"
             android:exported="false" />
@@ -54,6 +58,7 @@
             android:name=".Activities.LoginPage"
             android:exported="true">
 
+
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
 
@@ -61,6 +66,7 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
+
     </application>
 
 </manifest>
