--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".Activities.SearchResultPage"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".Activities.UserDetailPage"
+            android:exported="false" />
+        <!-- <activity -->
+        <!-- android:name=".Activities.SearchResultPage" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".Activities.ProductPage"
             android:exported="false" />
@@ -27,12 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- <activity -->
-
         <activity
             android:name=".Activities.SearchResultPage"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="false" />
-
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activities.RegisterActivity"
             android:exported="false" />
@@ -58,7 +59,6 @@
             android:name=".Activities.LoginPage"
             android:exported="true">
 
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
 
@@ -66,7 +66,6 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-
     </application>
 
 </manifest>
