--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name=".Activities.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Activities.Favorite"
+            android:name=".Activities.FavoritePage"
             android:exported="true" />
         <activity
             android:name=".Activities.Post"
