Complete the UI and data presentation of the product editing page. Next step: Implement editing functionality

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -74,6 +74,12 @@
             android:name=".Activities.ProductsManagePage"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".Activities.ProductEditorPage"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
