--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -49,7 +49,7 @@ assets:
 
 ### Questions (answer before final submission):
 1. You (as a group) completed this work (tick the most appropriate option):
-  - [ ] by yourself (as a group) without the help of others;
+  - [X] by yourself (as a group) without the help of others;
       [ ] with Gen AI tools (e.g., ChatGPT, Co-Pilot).
       [ ] using online resources (e.g., Stackoverflow, blogs)
 
@@ -66,11 +66,14 @@ assets:
 
 # for each member, sign by inputting your name and uid here (remove any empty "name+uid" entries)
 members:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Lingjie Qin
+    uid: u7756873
+  - name: Scott Ferrageau de St Amand
+    uid: u7303997
+  - name: Wanzhong Wu
+    uid: u7642453
+  - name: Wen Li
+    uid: u7706423
+  - name: Xiaojie Zhou
+    uid: u7769944
+
