--- a/items/statement-of-originality.yml
+++ b/items/statement-of-originality.yml
@@ -59,18 +59,18 @@ assets:
 
 ### Questions (answer before final submission):
 1. You (as a group) completed this work (tick the most appropriate option):
-  - [X] by yourself (as a group) without the help of others;
-      [ ] with Gen AI tools (e.g., ChatGPT, Co-Pilot).
+  - [] by yourself (as a group) without the help of others;
+      [X] with Gen AI tools (e.g., ChatGPT, Co-Pilot).
       [ ] using online resources (e.g., Stackoverflow, blogs)
 
 2. If not completed by yourself only, how did the use of Gen AI tools (and which ones), contribute to completing this assignment?
-  - Tool(s): <tools used here>
+  - Tool(s): <ChatGPT> It help us to debug our code.
   
 3. How did they contribute to the completion of this assignment?
-  - <your answer here>
+  - <It make our work more efficient, once we think of a correct idea, we can just go for it.>
 
 4. How long did it take to complete this assignment (approximately, in hours)?
-  - <your answer here> hours
+  - <240+> hours
 
 
 
